--- a/audio_plugins/_SPARTA_dirass_/make/win64/VisualStudio2017/sparta_dirass_SharedCode.vcxproj.filters
+++ b/audio_plugins/_SPARTA_dirass_/make/win64/VisualStudio2017/sparta_dirass_SharedCode.vcxproj.filters
@@ -463,6 +463,9 @@
     <ClCompile Include="..\..\..\..\..\SDKs\Spatial_Audio_Framework\framework\saf_utilities\saf_complex.c">
       <Filter>sparta_dirass\Spatial_Audio_Framework\framework\saf_utilities</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\..\SDKs\Spatial_Audio_Framework\framework\saf_utilities\saf_filters.c">
+      <Filter>sparta_dirass\Spatial_Audio_Framework\framework\saf_utilities</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\..\..\..\SDKs\Spatial_Audio_Framework\framework\saf_utilities\saf_free.c">
       <Filter>sparta_dirass\Spatial_Audio_Framework\framework\saf_utilities</Filter>
     </ClCompile>
@@ -2377,6 +2380,9 @@
       <Filter>sparta_dirass\Spatial_Audio_Framework\framework\saf_utilities</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\..\..\SDKs\Spatial_Audio_Framework\framework\saf_utilities\saf_complex.h">
+      <Filter>sparta_dirass\Spatial_Audio_Framework\framework\saf_utilities</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\..\SDKs\Spatial_Audio_Framework\framework\saf_utilities\saf_filters.h">
       <Filter>sparta_dirass\Spatial_Audio_Framework\framework\saf_utilities</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\..\..\SDKs\Spatial_Audio_Framework\framework\saf_utilities\saf_free.h">
